--- a/mythesis.tex
+++ b/mythesis.tex
@@ -291,7 +291,7 @@ massive star ($>8~\msun$) at the end of its life. The collapse also triggers a T
  R > \frac{2GM}{c^{2}},
 \ee 
 where $G$ is the gravitational constant and $c$ is the speed of light, %constrains the possible mass %and radius of neutron stars.
-differentiates neutron stars from black holes. More compact objects (for which $R < 2GM/c^{2}$) are inside the event horizon meaning that the light cannot escape the object. This constraint is presented in figure \ref{fig:eos_mr} as a blue region.
+differentiates neutron stars from black holes. More compact objects (for which $R < 2GM/c^{2}$) are inside the event horizon meaning that the light cannot escape the object. This constraint is presented in Figure \ref{fig:eos_mr} as a blue region.
 
 
 A more strict upper bound to the compactness (ratio between the mass and radius) of a neutron star follows
@@ -300,13 +300,13 @@ that the speed of sound in dense matter has to be less than the speed of light. 
 \be \label{eq:causality}
  R \gtrsim \frac{3GM}{c^{2}}.
 \ee 
-This constraint is shown in figure \ref{fig:eos_mr} as a green region. Neutron stars have also a minimum stable mass, which is about $0.1 ~\msun$, although the origin of neutron star in a supernova gives a more realistic minimum (on the order of $1.1 ~\msun$) \cite{lattimer2013}.
+This constraint is shown in Figure \ref{fig:eos_mr} as a green region. Neutron stars have also a minimum stable mass, which is about $0.1 ~\msun$, although the origin of neutron star in a supernova gives a more realistic minimum (on the order of $1.1 ~\msun$) \cite{lattimer2013}.
 
 A lower limit for the compactness of a neutron star can be obtained from its spin frequency. The radius of the star cannot extend further than the point where the spin frequency equals to the Keplerian frequency. Assuming a rigid Newtonian sphere, this frequency can be expressed as
 \be \label{eq:keplerian}
 \nu_{\mathrm{K}} = 2 \pi \sqrt{\frac{GM}{r^{3}}},
 \ee 
-where $r$ is the distance from the center of the star. Thus at $r=R$, $~\nu_{\mathrm{K}}$ has to be higher than the observed spin frequency, and we get a lower limit for $M/R^{3}$. This constraint is shown in figure \ref{fig:eos_mr} for the highest measured rotational frequency ($641$ Hz \cite{lattimer}) as a red region. One should also take into account the non-spherical shape and the general relativistic effects, but a lower limit is still obtained.
+where $r$ is the distance from the center of the star. Thus at $r=R$, $~\nu_{\mathrm{K}}$ has to be higher than the observed spin frequency, and we get a lower limit for $M/R^{3}$. This constraint is shown in Figure \ref{fig:eos_mr} for the highest measured rotational frequency ($641$ Hz \cite{lattimer}) as a red region. One should also take into account the non-spherical shape and the general relativistic effects, but a lower limit is still obtained.
 
 
 
@@ -344,13 +344,13 @@ For realistic EOSs the previous equations must be numerically solved to obtain $
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The number of possible EOSs can be reduced by observing which masses and radii the EOS should be able to produce. Different EOSs are shown in figure \ref{fig:eos_mr}. The highest measured mass of a neutron star is close to two solar masses \cite{demorest} which rules out all the EOSs that cannot produce a mass so large. In figure \ref{fig:eos_mr} this leaves only two possible EOSs, but there are also many EOSs which are not shown. %From the highest measured rotational frequency of a pulsar ($641$ Hz \cite{lattimer}) we get a lower limit for the compactness that an EOS must reach. This constraint and also constraints from the general relativity and causality (equations \ref{eq:schw_cond} and \ref{eq:causality}) are presented in the figure \ref{fig:eos_mr}.
-The orange curves in figure show the contours of constant radiation radius $R_{\infty}$, which is the apparent radius of the object at "infinity". It is larger than $R$, since the light bending makes the star appear larger, and is given by \cite{lattimer2001}
+The number of possible EOSs can be reduced by observing which masses and radii the EOS should be able to produce. Different EOSs are shown in Figure \ref{fig:eos_mr}. The highest measured mass of a neutron star is close to two solar masses \cite{demorest} which rules out all the EOSs that cannot produce a mass so large. In Figure \ref{fig:eos_mr} this leaves only two possible EOSs, but there are also many EOSs which are not shown. %From the highest measured rotational frequency of a pulsar ($641$ Hz \cite{lattimer}) we get a lower limit for the compactness that an EOS must reach. This constraint and also constraints from the general relativity and causality (equations \ref{eq:schw_cond} and \ref{eq:causality}) are presented in the figure \ref{fig:eos_mr}.
+The orange curves in Figure \ref{fig:eos_mr} show the contours of constant radiation radius $R_{\infty}$, which is the apparent radius of the object at "infinity". It is larger than $R$, since the light bending makes the star appear larger, and is given by \cite{lattimer2001}
 \be \label{eq:rinfty}
 R_{\infty} = \frac{R}{\sqrt{1-2GM/Rc^{2}}}.
 \ee  
 
-Knowing the relation between the mass and radius of any particular neutron star gives also limits to the possible EOSs. For example, suddenly increased spin rates of pulsars ("glitches") have been used to get mass-radius relations \cite{lattimer2001}. It has been a strong indication that the star's moment of inertia $I$ acts as an angular momentum reservoir for the sudden spin-ups \cite{link1999}. The measured $\Delta I / I = 0.014$  for Vela pulsar gives the mass as a function of radius, and it is also shown as a dashed line in figure \ref{fig:eos_mr}. The correct EOS of neutron star has to cross this line. In our work we aim to find out independent knowledge %(in terms of probability distributions) 
+Knowing the relation between the mass and radius of any particular neutron star gives also limits to the possible EOSs. For example, suddenly increased spin rates of pulsars ("glitches") have been used to get mass-radius relations \cite{lattimer2001}. It has been a strong indication that the star's moment of inertia $I$ acts as an angular momentum reservoir for the sudden spin-ups \cite{link1999}. The measured $\Delta I / I = 0.014$  for Vela pulsar gives the mass as a function of radius, and it is also shown as a dashed line in Figure \ref{fig:eos_mr}. The correct EOS of neutron star has to cross this line. In our work we aim to find out independent knowledge %(in terms of probability distributions) 
 of both mass and radius of observed pulsars using pulse profile modeling. 
 
 
@@ -384,7 +384,7 @@ of both mass and radius of observed pulsars using pulse profile modeling.
 
 
 Rotating neutron stars were first detected as radio pulsars in 1967 \cite{gold68}. %http://adsabs.harvard.edu/abs/1968Natur.218..731G
-After that, many different classes of pulsars have been discovered including those situated in low mass X-ray binaries (LMXBs). LMXBs are systems in which the neutron star accretes matter from a non-collapsed companion (with a relatively low mass $M \lesssim \msun$) via an accretion disk. Accreting millisecond X-ray pulsars (AMXPs) are a subgroup of the LMXBs in which the gas from the accretion disk (stripped from the companion) is channeled onto the magnetic poles of a rapidly rotating neutron star. The result is a pair of "hot spots" \ on the pulsar surface.  This gives rise to the X-ray pulsations with typical periods of a few milliseconds corresponding to the spin frequency of the neutron star. By definition, AMXPs are spinning at frequencies $\nu \ge 100 ~\mathrm{Hz}$ and have weak surface magnetic fields ($B \sim 10^{8-9}$ G) ~\cite{patruno}. A schematic view of the accretion onto the hot spots of the pulsar is shown in figure \ref{fig:shcematic}.
+After that, many different classes of pulsars have been discovered including those situated in low mass X-ray binaries (LMXBs). LMXBs are systems in which the neutron star accretes matter from a non-collapsed companion (with a relatively low mass $M \lesssim \msun$) via an accretion disk. Accreting millisecond X-ray pulsars (AMXPs) are a subgroup of the LMXBs in which the gas from the accretion disk (stripped from the companion) is channeled onto the magnetic poles of a rapidly rotating neutron star. The result is a pair of "hot spots" \ on the pulsar surface.  This gives rise to the X-ray pulsations with typical periods of a few milliseconds corresponding to the spin frequency of the neutron star. By definition, AMXPs are spinning at frequencies $\nu \ge 100 ~\mathrm{Hz}$ and have weak surface magnetic fields ($B \sim 10^{8-9}$ G) ~\cite{patruno}. A schematic view of the accretion onto the hot spots of the pulsar is shown in Figure \ref{fig:shcematic}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -392,7 +392,7 @@ After that, many different classes of pulsars have been discovered including tho
 %\centerline{\epsfig{file=oblate_fig.png,width=8.0cm}}
 \centerline{\epsfig{file=schematic.jpg,width=12.0cm}} 
 %or maybe lattimer instead
-\caption{A view from a magnetohydrodynamical simulation for an accreting compact object with an inclined dipole field. The density of the streaming matter changes exponentially from blue to red. Red lines with arrows show selected magnetic field lines. The magnetic moment, $\bmath{\mu}$, and the rotation axis, $\bmath{\Omega}$, are also shown. From Romanova et. al (2004) \cite{romanova}.} 
+\caption{A view from a magnetohydrodynamical simulation for an accreting compact object with an inclined dipole field. The density of the streaming matter changes exponentially from blue to red. Red lines with arrows show selected magnetic field lines. The magnetic moment, $\bmath{\mu}$, and the rotation axis, $\bmath{\Omega}$, are also shown. From Romanova {\it et al}. (2004) \cite{romanova}.} 
 \label{fig:shcematic}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -411,7 +411,7 @@ It provided a confirmation of the "recycling scenario" \ which states that AMXPs
 %SAX J1808.4–3658 went into outburst again in 2000, 2002, 2005, 2008 and 2011,
 %with an approximate recurrence time of about 1.6-3.3 yr, and is the best sampled and
 
-After the first two outbursts, \source \ has gone into outburst several times reoccurring approximately every two to three years. It is the best sampled and studied object out of all AMXPs. Typically the outburst consists of five phases: a fast rise, with a steep increase in luminosity lasting only a few days, a peak, a slow decay stage, a fast decay phase, and the flaring tail. Except the last phase, the aforementioned outburst division is typical for several X-ray binaries and can in principle be partially explained with a so-called instability model \cite{disc-instability} (see figure \ref{fig:outburst} for a such outburst).
+After the first two outbursts, \source \ has gone into outburst several times reoccurring approximately every two to three years. It is the best sampled and studied object out of all AMXPs. Typically the outburst consists of five phases: a fast rise, with a steep increase in luminosity lasting only a few days, a peak, a slow decay stage, a fast decay phase, and the flaring tail. Except the last phase, the aforementioned outburst division is typical for several X-ray binaries and can in principle be partially explained with a so-called instability model \cite{disc-instability} (see Figure \ref{fig:outburst} for a such outburst).
 
 
 
@@ -421,7 +421,7 @@ After the first two outbursts, \source \ has gone into outburst several times re
 %\centerline{\epsfig{file=oblate_fig.png,width=8.0cm}}
 \centerline{\epsfig{file=outburst.png,width=12.0cm}} 
 %or maybe lattimer instead
-\caption{Light curve of the 2015 outburst of \sourceb \ as observed by {\it Swift-XRT} (black points) and {\it XMM-Newton} (the green star). From Sanna et al. (2016) \cite{outburst}.}% The green star represents
+\caption{Light curve of the 2015 outburst of \sourceb \ as observed by {\it Swift-XRT} (black points) and {\it XMM-Newton} (the green star). From Sanna {\it et al}. (2016) \cite{outburst}.}% The green star represents
 %the epoch of the XMM-Newton observation \cite{outburst}.}  
 \label{fig:outburst}
 \end{figure}
@@ -512,7 +512,7 @@ Due to the fast rotation, the millisecond pulsars have an oblate shape instead o
 
 There are different models describing the exact shape and oblateness of the neutron star (function $R(\theta)$, where $\theta$ is the colatitude measured from the spin axis).
 %The exact shape and oblateness of the star (function $R(\theta)$) can be chosen from different models ($\theta$ is the colatitude measured from the spin axis).
-One of the most recent ones was presented by Algendy et al. (2014) \cite{algendy}. 
+One of the most recent ones was presented by Algendy {\it et al}. (2014) \cite{algendy}. 
 We use primarily it in this thesis. In this model %(in geometric units
 %where $G = c = 1$)
 \begin{equation}
@@ -536,7 +536,7 @@ and
 In these equations $\req$ is the radius of the rotating star measured at the equator and $\Omega = 2\pi/P$, where $P$ is the spin period. %The equator radius is measured in the normal Schwarzschild coordinates as all the radii are in this thesis.
 
 As another model %in pulse profile comparison 
-we have also used a model presented by Morsink et al. (2007) \cite{morsink}. In that model
+we have also used a model presented by Morsink {\it et al}. (2007) \cite{morsink}. In that model
 \be\label{eq:rtheta}
 \frac{R(\theta)}{\req} = 1 + \sum\limits_{n=0}^2 a_{2n}(\bar{\zeta},\bar{\epsilon})P_{2n}(\cos(\theta)), 
 \ee
@@ -735,7 +735,7 @@ Equation (\ref{eq:cossigma2}) is useful since we need to know the emission angle
 
 Before we can get the angle $\sigma$ from equation (\ref{eq:cossigma2}) we also first need to know how to get the angle $\alpha$ when we know the light bending angle $\psi$. The angles $\psi$ (for every point at every phase) we know directly from the geometry since we can calculate them using equation (\ref{eq:psi2}). In case of non-infinitesimal spot (which is discussed more in the Section 2.1.6), we of course need a  transformation of coordinates between the spot frame and the frame of the star (to get corresponding $\theta$ and $\phi$ for every point inside the spot). The angle $\psi$ is anyway straight determined since we are going to calculate the trajectories for only those photons which are going to arrive at the observer (not in some other direction). The task is now to find out the true emission angle $\alpha$ using general relativity. 
 
-The exact relation between $\alpha$ and $\psi$ (when $\alpha < \pi/2$) in Schwarzschild geometry (i.e., light bending) is given by \cite{mtw}%(e.g. Misner et al. 1973 \cite{mtw}) %\citep[e.g.][]{mtw73}
+The exact relation between $\alpha$ and $\psi$ (when $\alpha < \pi/2$) in Schwarzschild geometry (i.e., light bending) is given by \cite{mtw}%(e.g. Misner {\it et al}. 1973 \cite{mtw}) %\citep[e.g.][]{mtw73}
 \be \label{eq:bend2}
   \psi_{\mathrm{p}}(R,\alpha)=\int_R^{\infty} \frac{dr}{r^2} \left[ \frac{1}{b^2} -
        \frac{1}{r^2}\left( 1- \frac{\rg}{r}\right)\right]^{-1/2} ,
@@ -784,7 +784,7 @@ The impact parameter $b$ depends only on the bending angle $\psi$, but not on $\
 
 The apparent area of the infinitesimal spot measured by the observer in the non-rotating frame near the stellar surface %(but also at infinity) %not true? .. note: dS*cos(sigma) = Lorentz invariant
 is $\d S=\Dop\ \d S'$ \cite{terrell}\cite{lightman75}.
-%(see Terrell 1959 \cite{terrell} or Lightman et al. 1975 \cite{lightman75}). %; Ghisellini 1999) %http://journals.aps.org/pr/pdf/10.1103/PhysRev.116.1041 (terrell)
+%(see Terrell 1959 \cite{terrell} or Lightman {\it et al}. 1975 \cite{lightman75}). %; Ghisellini 1999) %http://journals.aps.org/pr/pdf/10.1103/PhysRev.116.1041 (terrell)
 %lightman75 = problem book in relativity and gravitation (found in Tuorla)
 %didin't found $\d S=\Dop\ \d S'$
 We also know the relation between $\sigma$ and $\sigma'$ from the relativistic aberration formula (\ref{eq:aberr2}) (for motions parallel to the spot surface) $\cos\sigma' =   \Dop \ \cos\sigma$. Thus 
@@ -987,13 +987,13 @@ The spot could also be modeled to have a more complicated shape. %For a large sp
 
 The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In all comparisons we assume the neutron star to be at distance $D = 10$ kpc. In the case of spherical star we have checked that the new version gives the same results as the old one \cite{poutabelo} (which assumed a spherical star and has been shown to give accurate results). 
 
-In the case of oblate star we have compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($\req = 16.4$ km, $M = 1.4$  $\msun$, $\nu = 600$ Hz, and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3}, and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In the Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in the Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar and only photons with high bending angles can reach the observer. Instead in Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
+In the case of oblate star we have compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($\req = 16.4$ km, $M = 1.4$  $\msun$, $\nu = 600$ Hz, and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3}, and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar and only photons with high bending angles can reach the observer. Instead in Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=mor3test.eps,width=12.0cm}}
-\caption{Light curves (bolometric flux) for light emitted from one infinitesimal spot with $\req = 16.4$ km, $M = 1.4$ $\msun$, $\nu = 600$ Hz, $\thetas = 49 \degree$, $i = 70 \degree$, and $T_{\mathrm{eff}} = 2$ keV . Results are compared with Figure 3 of Morsink et. al. (2007) \cite{morsink}. The blue dashed curve is the result of \cite{morsink} and the black solid line is our result.
+\caption{Light curves (bolometric flux) for light emitted from one infinitesimal spot with $\req = 16.4$ km, $M = 1.4$ $\msun$, $\nu = 600$ Hz, $\thetas = 49 \degree$, $i = 70 \degree$, and $T_{\mathrm{eff}} = 2$ keV . Results are compared with figure 3 of Morsink {\it et al}. (2007) \cite{morsink}. The blue dashed curve is the result of \cite{morsink} and the black solid line is our result.
 \label{fig:mor3}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1002,7 +1002,7 @@ In the case of oblate star we have compared our light curves to those obtained b
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=cad3test.eps,width=12.0cm}}
-\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Fig. \ref{fig:mor3} but with $\thetas = 41 \degree$ and $i = 20 \degree$. The results are compared with Figure 3 of Cadeau et. al. (2006) \cite{cadeau}. The blue dashed curve is the result of \cite{cadeau} and the black solid line is our result (almost coinciding).
+\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Figure \ref{fig:mor3} but with $\thetas = 41 \degree$ and $i = 20 \degree$. The results are compared with figure 3 of Cadeau {\it et al}. (2006) \cite{cadeau}. The blue dashed curve is the result of \cite{cadeau} and the black solid line is our result (almost coinciding).
 \label{fig:cad3}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1011,15 +1011,15 @@ In the case of oblate star we have compared our light curves to those obtained b
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=cad4test.eps,width=12.0cm}}
-\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Fig. \ref{fig:mor3} but with $\thetas = 15 \degree$ and $i = 100 \degree$. The results are compared with Figure 4 of Cadeau et. al. (2006) \cite{cadeau}. The blue dashed curve is the result of \cite{cadeau} and the black solid line is our result.
+\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Figure \ref{fig:mor3} but with $\thetas = 15 \degree$ and $i = 100 \degree$. The results are compared with figure 4 of Cadeau {\it et al}. (2006) \cite{cadeau}. The blue dashed curve is the result of \cite{cadeau} and the black solid line is our result.
 \label{fig:cad4}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-The profiles of pulsars have also been compared to profiles obtained from full ray tracing method (Nättilä \& Pihajoki 2017, in preparation)), which show very similar results (see figures \ref{fig:jpulse1}, \ref{fig:jpulse2}, and \ref{fig:jpulse3}). %correspond each other well. 
+The profiles of pulsars have also been compared to profiles obtained from full ray tracing method (Nättilä \& Pihajoki 2017, in preparation)), which show very similar results (see Figures \ref{fig:jpulse1}, \ref{fig:jpulse2}, and \ref{fig:jpulse3}). %correspond each other well. 
 The photon number fluxes at $2$, $6$, and $12$ keV energies, along with the bolometric photon number flux, are computed to both spherical ($R(\theta) = \req$) and oblate stars ($R(\theta)$ from equation \ref{rtheta2}). Angular distribution of radiation corresponds either to a blackbody with isotropic beaming (noted as "blackbody") or to a Hopf profile. %so some power-law or what is the energy-dependence then....?
-In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \degree$, $i = 60 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we compute the light curves with two different spinning frequencies ($\nu = 1$ Hz and $\nu = 400$ Hz) and with the spot size $\rho = 1 \degree$ or $30 \degree$ (figures \ref{fig:jpulse1} and \ref{fig:jpulse2}). In the case of oblate star ($\req = 12$ km, $M = 1.4  ~\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we show the light curves with three different spot colatitudes $\thetas  = 18 \degree$,   $45 \degree$, and $90 \degree$ for the isotropic blackbody, along with $\thetas = 45 \degree$ and Hopf profile.
+In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \degree$, $i = 60 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we compute the light curves with two different spinning frequencies ($\nu = 1$ Hz and $\nu = 400$ Hz) and with the spot size $\rho = 1 \degree$ or $30 \degree$ (Figures \ref{fig:jpulse1} and \ref{fig:jpulse2}). In the case of oblate star ($\req = 12$ km, $M = 1.4  ~\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we show the light curves with three different spot colatitudes $\thetas  = 18 \degree$,   $45 \degree$, and $90 \degree$ for the isotropic blackbody, along with $\thetas = 45 \degree$ and Hopf profile.
 
 
 %Show here some profiles..
@@ -1038,7 +1038,7 @@ In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \de
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=jpulsec2.pdf,width=17.0cm}}
-\caption{The light curve (monochromatic photon number fluxes at $2$, $6$, and $12$ keV along with bolometric photon number flux) comparisons with rapidly rotating spherical star ($\nu = 400$ Hz). Otherwise the parameters and symbols are the same as in figure \ref{fig:jpulse1}. From Nättilä \& Pihajoki 2017 (in preparation).
+\caption{The light curve (monochromatic photon number fluxes at $2$, $6$, and $12$ keV along with bolometric photon number flux) comparisons with rapidly rotating spherical star ($\nu = 400$ Hz). Otherwise the parameters and symbols are the same as in Figure \ref{fig:jpulse1}. From Nättilä \& Pihajoki 2017 (in preparation).
 \label{fig:jpulse2}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1047,7 +1047,7 @@ In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \de
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=jpulsec3.pdf,width=17.0cm}}
-\caption{The light curve (monochromatic photon number fluxes at $2$, $6$, and $12$ keV along with bolometric photon number flux) comparisons with an oblate star ($\req = 12$ km, $M = 1.4$ $\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$, and $T_{\mathrm{eff}} = 2$ keV) emitting according to isotropic blackbody law or Hopf profile with different spot colatitudes: $\thetas = 18 \degree$, $45 \degree$ and $90 \degree$. The symbols are the same as in figures \ref{fig:jpulse1} and \ref{fig:jpulse2}. From Nättilä \& Pihajoki 2017 (in preparation).
+\caption{The light curve (monochromatic photon number fluxes at $2$, $6$, and $12$ keV along with bolometric photon number flux) comparisons with an oblate star ($\req = 12$ km, $M = 1.4$ $\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$, and $T_{\mathrm{eff}} = 2$ keV) emitting according to isotropic blackbody law or Hopf profile with different spot colatitudes: $\thetas = 18 \degree$, $45 \degree$ and $90 \degree$. The symbols are the same as in Figures \ref{fig:jpulse1} and \ref{fig:jpulse2}. From Nättilä \& Pihajoki 2017 (in preparation).
 \label{fig:jpulse3}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1061,7 +1061,7 @@ In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \de
 %http://math.nyu.edu/~mjlewis/foo.pdf %about Monte Carlo
 
 The model presented in the previous section can be used to constrain parameters of neutron stars by using Bayesian inference. We can fit the observed data to the model and use Markov Chain Monte Carlo (MCMC) methods to integrate over the parameter space to find the most probable values for the parameters of the model \cite{mc_methods_book}. The data can also be synthetic (as in this thesis) in order to test our methods and tools. %if the sampler will actually find the same values that were used when generating the data. 
-Previously the constraints of neutron star masses and radii with synthetic data have been studied e.g., by Ka Ho Lo et al, 2013 \cite{miller} and Miller \& Lamb, 2015 \cite{millerlamb2015}. %(for future space missions).   
+Previously the constraints of neutron star masses and radii with synthetic data have been studied e.g., by Ka Ho Lo {\it et al}., 2013 \cite{miller} and Miller \& Lamb, 2015 \cite{millerlamb2015}. %(for future space missions).   
 More about the synthetic data of this thesis is presented in the Results section. 
 
 The aim of this work is to determine the most probable ("best-fit") values of the parameters in the pulse profile model, given the "observed" \ 
@@ -1124,7 +1124,7 @@ Here $V(X_{\tstep})$ is an observable. Basically this measures how related the s
 
 One way to compute the autocorrelation time is to use the weights (log-likelihoods) of the fits as the observable $V(X_{\tstep})$. If the weights are strongly correlated with many different lags, $\tau$ will be large. Of course most of the correlation is originated from samples close to each other (small lags). This can be seen by inspecting the autocovariance as function of the lag (see Figure \ref{fig:acexample} in Results). There is no way to get completely rid of autocorrelation, but at least some of the problem may be solved by making the sequence of samples thinner. In principle the number of samples which should be independent is $N_{\mathrm{step}}/\tau$, where $N_{\mathrm{step}}$ is the total number of steps \cite{kaiser}. However, especially with Metropolis algorithm $\tau$ is typically high (unless with very carefully designed proposal densities) meaning that very high fraction of the samples should be removed.
 
-One other major disadvantage is that the Metropolis algorithm may work poorly for skewed or anisotropic distributions depending on the proposal distribution. One simple example of such is a two dimensional skewed probability distribution (shown in figure \ref{fig:skewed})
+One other major disadvantage is that the Metropolis algorithm may work poorly for skewed or anisotropic distributions depending on the proposal distribution. One simple example of such is a two dimensional skewed probability distribution (shown in Figure \ref{fig:skewed})
 \be \label{eq:skew} 
 H(\vec{x}) = \exp \left(-\frac{(x_{1}-x_{2})^{2}}{2\epsilon_{c}}-\frac{(x_{1}+x_{2})^{2}}{2} \right),
 \ee
@@ -1172,7 +1172,7 @@ the ensemble. We call them a complementary ensemble. The motivation is that the 
 %In this algorithm, we use a group or ensemble of sequences. Each member of
 %the ensemble is called a walker.
 
-One of the simplest affine invariant trial moves, and the move we use here, is the so-called stretch move. In the stretch move algorithm each walker is moved using only one randomly selected complementary walker (see figure \ref{fig:smove}). The move of current walker $k$ is proposed along a line between the walker itself and the complementary walker $j$ according to the distribution \cite{emceehammer}
+One of the simplest affine invariant trial moves, and the move we use here, is the so-called stretch move. In the stretch move algorithm each walker is moved using only one randomly selected complementary walker (see Figure \ref{fig:smove}). The move of current walker $k$ is proposed along a line between the walker itself and the complementary walker $j$ according to the distribution \cite{emceehammer}
 \be \label{eq:smove}
 Y(k) = X(j) + Z(X(k)-X(j)),
 \ee
@@ -1212,7 +1212,7 @@ As mentioned earlier the aim of this work is to determine the probability distri
 
 \subsection{Synthetic data}
 
-The synthetic data in this work is made to resemble the real observations as closely as possible. The X-ray count data from \source \ is used as a reference. The amplitude of the modulation in the normalized number fluxes have been set close to the same value in the synthetic data as in the observations. We also use the same energy intervals and same the number of phase points as in the real data. The original data is shown in the Figure \ref{fig:saxdata}.  
+The synthetic data in this work is made to resemble the real observations as closely as possible. The X-ray count data from \source \ is used as a reference. The amplitude of the modulation in the normalized number fluxes have been set close to the same value in the synthetic data as in the observations. We also use the same energy intervals and same the number of phase points as in the real data. The original data is shown in Figure \ref{fig:saxdata}.  
 
 
 The parameters of the pulse profile model are chosen such that their values are physically reasonable and they produce a light curve similar to the SAX-data. The physical parameters are given in Table \ref{table:params}. The observed variability amplitude (see equation \ref{eq:amplitude}) is then obtained by choosing inclination $i$ and the colatitude of the spot $\thetas$ appropriately since the amplitude can be approximated (neglecting the Doppler effect and using the Beloborodov's approximation \cite{poutaviironen})
@@ -1337,7 +1337,7 @@ Other prior probabilities of the parameters are kept always uniform inside their
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Before obtaining the final posterior probability distributions we have reduced the burn-in phase from each ensemble by removing the first $20,000$ samples from each chain. After that we still have approximately $50,000$ samples left belonging to each ensemble.  Figure \ref{fig:wexample} shows one example of the log-likelihoods of a converged chain in one of the simulations. In that Figure we use an averaged step of ensemble which is an average of $20$ (number of walkers in the ensemble) consecutive single accepted steps. However, for many ensembles we found few walkers which didn't seem to achieve convergence even after a long time (they appeared as sharp peaks in the log-likelihood plots).
+Before obtaining the final posterior probability distributions we have reduced the burn-in phase from each ensemble by removing the first $20,000$ samples from each chain. After that we still have approximately $50,000$ samples left belonging to each ensemble. Figure \ref{fig:wexample} shows one example of the log-likelihoods of a converged chain in one of the simulations. In that Figure we use an averaged step of ensemble which is an average of $20$ (number of walkers in the ensemble) consecutive single accepted steps. However, for many ensembles we found few walkers which didn't seem to achieve convergence even after a long time (they appeared as sharp peaks in the log-likelihood plots).
 
 The same averaged steps are also used in Figure \ref{fig:acexample}, where we show an example of the autocorrelation. The autocorrelations of all the six ensembles from one simulation are presented using the weights as observables (see equation \ref{eq:autocovariance}). The Figure shows the autocorrelation only approximatively since one should make sure that the ensemble averaged weights are calculated for walkers being at a same state of their sequence. We may, however, see that in general the correlation is not very strong, and we have reduced it by taking every fifth sample from the chain.%... Thinning we used is .... (TBD)  
 
