--- a/mythesis.tex
+++ b/mythesis.tex
@@ -797,7 +797,7 @@ which shows that the spot area projected on to the plane perpendicular to the ph
 This area is also called a photon beam cross-section.
 The infinitesimal spot area measured in the frame comoving with the spot may be calculated as \cite{morsink} %(Morsink et al. 2007 \cite{morsink})
 \be \label{eq:surf_element}
-\d S'(\theta) = R^{2}(\theta) [1+f^{2}(\theta)]^{1/2} \sin \theta \d \theta \d \phi,
+\d S'(\theta) = \Gamma R^{2}(\theta) [1+f^{2}(\theta)]^{1/2} \sin \theta \d \theta \d \varphi,
 \ee
 where the factor $[1+f^{2}(\theta)]^{1/2}$ takes into account the oblateness of the spot surface (function $f(\theta)$ is given in equation \ref{eq:ftheta}).
 %which shows that the spot area projected on to the plane perpendicular 
@@ -1477,7 +1477,7 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=feqf.pdf,width=17.0cm}}
-\caption{Posterior probability distributions for radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$, and distance $D$ for the equatorial spot with only uniform priors.The one-dimensional distributions are normalized to give $1$ as the total probability. The colors, contours, and other symbols are the same as in Figure \ref{fig:polpost}.
+\caption{Posterior probability distributions for radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$, and distance $D$ for the equatorial spot with only uniform priors. The one-dimensional distributions are normalized to give $1$ as the total probability. The colors, contours, and other symbols are the same as in Figure \ref{fig:polpost}.
 \label{fig:eqpost}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
